--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rustpython-ast = { version = "0.4.0", features = ["visitor"] }
+rustpython-ast = { version = "0.4.0" }
+
+[dev-dependencies]
+rustpython-parser = "0.4.0"
