--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ rustpython-ast = { version = "0.4.0" }
 
 [dev-dependencies]
 rustpython-parser = "0.4.0"
+rustpython-ast = { version = "0.4.0", features = ["fold"] }
