--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
 	"editor.formatOnSave": true,
 	"[python]": {
 		"editor.defaultFormatter": "charliermarsh.ruff"
-	}
+	},
+	"python.defaultInterpreterPath": ".venv/bin/python",
+	"python.terminal.activateEnvInCurrentTerminal": true
 }
