--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ rustpython-ast = { version = "0.4.0" }
 [dev-dependencies]
 rustpython-parser = "0.4.0"
 rustpython-ast = { version = "0.4.0", features = ["fold"] }
+rand = "0.8.5"
