--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 rustpython-ast = { version = "0.4.0" }
+rustpython-literal = "0.4.0"
 
 [dev-dependencies]
 rustpython-parser = "0.4.0"
